<resources>
    <string name="app_name">RASA Motors</string>
    <string name="vehiclePage">Your Vehicles</string>
    <string name="noVehicles">No Vecicles Added</string>
    <string name="addVehicle">Add Vehicle</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="addNewVehicle">Add New Vehicle</string>
    <string name="vModel">Model :</string>
    <string name="vType">Type :</string>
    <string name="vNo">Vehicle Number :</string>
    <string name="vcolor">Color :</string>
    <string name="model">Enter model name</string>
    <string name="type">Enter vehicle type</string>
    <string name="vehicleNumber">Enter vehicle number</string>
    <string name="vehicleColor">Enter vehicle color</string>
    <string name="modelNull">Please Enter a Model Name!</string>
    <string name="typeNull">Please Enter The Type!</string>
    <string name="numberNull">Please Enter Vehicle Number!</string>
    <string name="colorNull">Please Enter The Color!</string>
    <string name="vehSuccess">Vehicle Added Successfully!</string>
    <string name="vehDetails">Vehicle Details</string>
    <string name="btnBack">Back</string>
    <string name="updateSuccess">Vehicle Details Updated Successfully!</string>
    <string name="deleteSuccess">Vehicle Details Deleted Successfully!</string>
    <string name="btnAdd">Add</string>
    <string name="cName">Name</string>
    <string name="cAddress">Address</string>
    <string name="cPhone">Phone Number</string>
    <string name="hintName">Enter Your Name</string>
    <string name="hintAddress">Enter Your Address</string>
    <string name="hintPhone">Enter Your Phone Number</string>
    <string name="btnReg">Register</string>
    <string name="btnSignIn">SIGN IN</string>
    <string name="btnSignUp">SIGN UP</string>
    <string name="hintMail">E-Mail</string>
    <string name="hintPass">Password</string>
    <string name="login">Login</string>
    <string name="btnUpdate">Update</string>
    <string name="btnDelete">Delete</string>
    <string name="cUpdate">User Details Updated Successfully!</string>
    <string name="cDelete">User Details Deleted Successfully!</string>
    <string name="noAccount">Don\'t have an account?</string>
    <string name="btnAppointments">Appointments</string>
    <string name="btnQuotation">Quotations</string>
    <string name="required">REQUIRED!</string>
    <string name="signedIn">User Signed in</string>
    <string name="signFail">Signed in Failed!</string>
    <string name="regSuccess">User Registered Successfully!</string>
    <string name="regFailed">Registration Failed!</string>
    <string name="logout">LOGOUT</string>
    <string name="btnViewProfile">View Profile</string>
    <string name="btnAppoint">Appointments</string>
    <string name="addAppoint">Add Appointment</string>
    <string name="topic">RASA MOTORS</string>
    <string name="addNewAppoint">Add New Appointment</string>
    <string name="appointDetails">Appointment Details</string>
    <string name="userProfile">User Profile</string>
    <string name="createAcc">Create a New Account</string>
    <string name="yourDetails">Your Details</string>
    <string name="addQuotation">Get New Quotation</string>
    <string name="btnNewQuotation">New Quotation</string>
    <string name="quotations">Quotations</string>
    <string name="quoteDetailes">Quotation Details</string>
</resources>
